syntax = "proto3";
option java_package = "org.onosproject.grpc.core.models";

package core;

// Corresponds to org.onosproject.core.ApplicationId.
message ApplicationIdProto {
    uint32 id = 1;
    string name = 2;
}
